--- a/index.html
+++ b/index.html
@@ -15,7 +15,24 @@
 </head>
 <body>
 
+	<div class="background">
 	
+		<div class="spacer1"></div>
+		
+		<div class="door">
+			<div class="doortext"></div>
+		</div>
+		
+		<div class="spacer2"></div>
+		
+		<div class="choices">
+			<div class="choice choice1"></div>
+			<div class="choice choice2"></div>
+			<div class="choice choice3"></div>
+			<div class="choice choice4"></div>
+		</div>
+	
+	</div>
 
 
 
